Fixed collapsed sidebar styling
Fixed collapsed logo
Fixed sidebar profile active state

--- a/kobenx/src/components/searchBar/SearchBar.css
+++ b/kobenx/src/components/searchBar/SearchBar.css
@@ -3,7 +3,7 @@
   max-width: 1000px;
   min-width: 170px;
   margin-inline: auto;
-  height: 79.5vh;
+  height: 76.7dvh;
 }
 
 .search-bar {
