--- a/kobenx/src/components/sideBar/SideBarStyle.css
+++ b/kobenx/src/components/sideBar/SideBarStyle.css
@@ -1,6 +1,9 @@
 .sidebar {
+  box-sizing: border-box;
   background-color: white;
   min-height: 100%;
+  height: 100%;
+  max-height: 100%;
   display: flex;
   justify-content: flex-start;
   flex-direction: column;
@@ -123,7 +126,7 @@
 
 @media (width < 1200px) {
   .sidebar {
-    max-width: 50px;
+    max-width: 83px;
     transition: 0.2s;
   }
 
@@ -158,11 +161,32 @@
 
   .sidebar-profile .profile-info{
     padding-left: 0;
+    height: 64px;
+    width: 64px;
+  }
+
+  .sidebar-profile:hover {
+    margin-top: auto;
+    background-color: var(--color-primary-subtle-light);
+    border-radius: 999px;
+    padding-left: 6px;
+    padding-right: 6px;
+    margin-left: -6px;
+    margin-right: -6px;
+    transition: 0.2s;
+  }
+
+  .sidebar-profile a.active {
+    background-color: var(--color-primary-subtle);
+    border-radius: 999px;
+    padding-left: 6px;
+    padding-right: 6px;
+    margin-left: -6px;
+    margin-right: -6px;
   }
   
   .sidebar-logo {
-    margin-left: auto;
-    margin-right: auto;
+    padding-left: 18px;
   }
 
   .logo-full {
