--- a/kobenx/src/index.css
+++ b/kobenx/src/index.css
@@ -83,9 +83,10 @@ button:focus-visible {
 
 .app-shell {
   display: flex;
-  height: 100%;
+  height: 100dvh;
   width: 100%;
   padding: 0;
+  overflow: hidden;
 }
 
 .main-content-area {
@@ -94,7 +95,7 @@ button:focus-visible {
   justify-content: center;
   align-items: flex-start;
   font-size: 3rem;
-  height: 95vh;
+  height: 95dvh;
   width: 100%;
   margin: 0;
   padding-top: 50px;
